👌 ADDED : Intro and courses detail

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Introduction</title>
+  </head>
+  <body>
+    <h1>Hi! I am Mehru</h1>
+    <p>
+      I am a computerc science student. The courses I have studied in univeristy
+      are:
+      <ui></ui>
+      <li>UIUX Designing</li>
+      <li>Data structure</li>
+      <li>Data mining</li>
+      <li>Human computer interaction</li>
+      <li>Mobile app development</li>
+      <li>Programming language</li>
+      <li>Software engineering</li>
+      <li>Artificial Intelligence</li>
+    </p>
+  </body>
+</html>
