✔ ADDED  : Hobbies section

--- a/index.html
+++ b/index.html
@@ -21,5 +21,21 @@
       <li>Software engineering</li>
       <li>Artificial Intelligence</li>
     </p>
+    
+    <ui></ui>
+    <ui></ui>
+    <ui></ui>
+    <ui></ui>
+    <ui></ui>
+    <p>
+      In my free time, I focus on designing new and creative ideas.My favourite
+      hobbies are are:
+      <ui></ui>
+      <li>Eating😁</li>
+      <li>Designing</li>
+      <li>Watching dramas</li>
+      <li>Signing</li>
+    </p>
+    
   </body>
 </html>
