😁 ADDED : Projects added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
       <li>Watching dramas</li>
       <li>Signing</li>
     </p>
+    <ui></ui>
+    <ui></ui>
+    <ui></ui>
+    <ui></ui>
     
+    <p> A computer scientist and enthusiastic graphic & uiux designer! I am passionate about new challenges I have worked on many projects like: 
+  <ui></ui>
+  <li> Library Managament system </li>
+<li> Book store </li>
+  <li> Learning Managament system </li>
+  <li> Quizdom</li>
+  <li> Web pages</li>
+  <li> Food app </li>
+  <li> Music app </li>
+  <li> Googleclass room app</li>
+  
+
+</p>
   </body>
 </html>
