made webpage more visually appealing
added few elements and fixed bugs in the code.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Introduction</title>
   </head>
-  <body>
+  <body bgcolor="lightblue">
+   <div align="center">
     <h1>Hi! I am Mehru</h1>
     <p>
-      I am a computerc science student. The courses I have studied in univeristy
-      are:
-      <ui></ui>
+      <b>I am a computer science student. The courses I have studied in univeristy
+        are:</b>
+      <ui>
       <li>UIUX Designing</li>
       <li>Data structure</li>
       <li>Data mining</li>
@@ -20,6 +21,7 @@
       <li>Programming language</li>
       <li>Software engineering</li>
       <li>Artificial Intelligence</li>
+      </ui>
     </p>
     
     <ui></ui>
@@ -28,21 +30,22 @@
     <ui></ui>
     <ui></ui>
     <p>
-      In my free time, I focus on designing new and creative ideas.My favourite
-      hobbies are are:
-      <ui></ui>
+     <b> In my free time, I focus on designing new and creative ideas.My favourite
+       hobbies are:</b>
+      <ui>
       <li>Eating😁</li>
       <li>Designing</li>
       <li>Watching dramas</li>
       <li>Signing</li>
+        </ui>
     </p>
     <ui></ui>
     <ui></ui>
     <ui></ui>
     <ui></ui>
     
-    <p> A computer scientist and enthusiastic graphic & uiux designer! I am passionate about new challenges I have worked on many projects like: 
-  <ui></ui>
+    <p><b> A computer scientist and enthusiastic graphic & uiux designer! I am passionate about new challenges I have worked on many projects like: </b>
+  <ui>
   <li> Library Managament system </li>
 <li> Book store </li>
   <li> Learning Managament system </li>
@@ -51,8 +54,9 @@
   <li> Food app </li>
   <li> Music app </li>
   <li> Googleclass room app</li>
-  
+  </ui>
 
 </p>
+     <div>
   </body>
 </html>
