✔ ADDED : Added separate file for illustrations

--- a/Illustration.html
+++ b/Illustration.html
@@ -1,1 +1,13 @@
-
+<p> As, I am an aspiring graphic designer. I made several iilustration:
+   <ui></ui>
+  <li> Professor illustration </li>
+  <li> Text Logos </li>
+  <li> Vector Logos </li>
+  <li> Facial illustration </li>
+  <li> Animated characters </li>
+  <li> Musci Poster </li>
+  <li> Social media posts</li>
+  <li> Vector eye</li>
+  <li> Badshahi mosque</li>
+  <li> Minimal design- cane/li>
+    </p>
