😁 ADDED : steps for UIUX

--- a/aboutuiux.html
+++ b/aboutuiux.html
@@ -1,9 +1,16 @@
 <h2> About UIUX Designing </h2>
 
-<p> In start, I thought that UIUX designing is all 
+<p> UIUX is a vast and demanding field in market. Lots of people are now worling in this field. In start, I thought that UIUX designing is all 
   about designing screens. And then display. That's
   it. But now, when I explore more about UIUX designing,
   I found that UIUX desinign is not about just designing
   the screens, then connecting them and final presenting
-  to others.
+  to others. Before designing any interface, we have to cover these steps & concepts:
+<ul></ul>
+<ui> Persona </ui>
+<ui> Prototyping </ui>
+<ui> Wireframes </ui>
+<ui> Mood board </ui>
+<ul></ul>
+ After passing and covering these steps, user can finally design the interface , design screens and then display it.
 </p>
