👌 ADDED : Software used for UIUX designing

--- a/aboutuiux.html
+++ b/aboutuiux.html
@@ -14,3 +14,20 @@
 <ul></ul>
  After passing and covering these steps, user can finally design the interface , design screens and then display it.
 </p>
+<ul></ul>
+<p> Moreover, software used for UIUX designing are: 
+  <ul></ul>
+<ui> Adobe xd </ui> 
+<ui> Figma </ui> 
+   <ul></ul>
+
+</p> 
+<ul></ul>
+<p> Figma is commonly and most used software and tool for UIUX designing because: 
+  <ul></ul>
+<ui> Vast applications </ui> 
+<ui> Flexibility </ui> 
+<ui> Link updation </ui> 
+<ui> Fast response </ui> 
+   <ul></ul>
+</p> 
