👌 ADDED : Description about UIUX

--- a/uiproject.html
+++ b/uiproject.html
@@ -2,7 +2,7 @@
 
 
 <ui></ui>
-<p> Also, I am a UIUX designer. I have designed several apps::
+<p> UI/UX design is a multidisciplinary field with a growing range of niche specializations including UX writing, interaction design, usability testing, visual design, and more. UI/UX job descriptions usually mention a mix of these roles. I am a UIUX designer. I have designed several apps:
    <ui></ui>
  <li> Fooderia app  - Where user can order food and can pay bill online. </li>
   <li> Music app - A music app where songs can be added and new playlist can be created. </li>
