👌 ADDED : Information about illustration

--- a/Illustration.html
+++ b/Illustration.html
@@ -1,4 +1,4 @@
-<p> As, I am an aspiring graphic designer. I made several iilustration:
+<p> An illustration is a decoration, interpretation or visual explanation of a text, concept or process, designed for integration in print and digital published media, such as posters, flyers, magazines, books, teaching materials, animations, video games and films. An illustration is typically created by an illustrator. As, I am an aspiring graphic designer. I made several iilustration:
    <ui></ui>
   <li> Professor illustration </li>
   <li> Text Logos </li>
