😁 ADDED :difference b/w illustration & Graphic designing

--- a/Illustration.html
+++ b/Illustration.html
@@ -11,3 +11,4 @@
   <li> Badshahi mosque</li>
   <li> Minimal design- cane/li>
     </p>
+<p>The main difference between graphic design and illustration is how and where you use them. Typically, graphic design leans more commercial, while illustration is related to fine art. As more and more commercial projects often require emotive and distinct visuals, those differences are becoming less obvious over time.</p>
