🥂 ADDED : Success relation with money

--- a/success.html
+++ b/success.html
@@ -1,3 +1,7 @@
+<h1> What is success? </h1>
+<p>
+   Some people think success is defined as having tons of money, fame and fortune. The reality is that success is defined in many ways, but it must come from within to motivate true success on your terms. ... You may believe success is defined by money, fame, happiness, material items, etc.</p>
+<ui></ui>
 <h2> Success posts </h2>
 
 
